force-app/main/default/objects/Account/fields/Account_Color__c.field-meta.xml
<CustomField>
    <fullName>Account_Color__c</fullName>
    <description>Color for claim team to differentiate between FS, AR, Scale.</description>
    <formula>IF ( Record_Type__c = &quot;Client&quot;, IMAGE(&apos;/resource/154402264100/BlueFlag&apos;,&quot;&quot;,14,50),
IF (Record_Type__c = &quot;AlphaRoot&quot;, IMAGE(&apos;/servlet/servlet.FileDownload?file=01537000000JDJB&apos;,&quot;&quot;,14,50),
IF (Record_Type__c = &quot;Scale&quot;, IMAGE(&apos;/servlet/servlet.FileDownload?file=01537000000JDqj&apos;,&quot;&quot;,14,50) ,&apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Color</label>
    <type>Text</type>
</CustomField>