force-app/main/default/objects/Account/fields/Account_Contact_Person_Email2__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Person_Email2__c</fullName>
    <description>For Scale account records. Populates with the Account Contact Person Email of the FS client account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Contact Person Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>