force-app/main/default/objects/Account/fields/Account_Contact_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Person_ID__c</fullName>
    <formula>Contact_Person__r.Id</formula>
    <label>Account Contact Person ID</label>
    <type>Text</type>
</CustomField>