force-app/main/default/objects/Account/fields/Account_Contact_Person_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Person_LinkedIn__c</fullName>
    <formula>Contact_Person__r.cbit__LinkedIn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Contact Person LinkedIn</label>
    <type>Text</type>
</CustomField>