force-app/main/default/objects/Account/fields/Account_Contact_Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Person_Phone__c</fullName>
    <formula>Contact_Person__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Contact Person Phone</label>
    <type>Text</type>
</CustomField>