force-app/main/default/objects/Account/fields/Account_Flag__c.field-meta.xml
<CustomField>
    <fullName>Account_Flag__c</fullName>
    <formula>IF(
Owner.Profile.Name = &quot;CSB&quot;,
IMAGE(&apos;/servlet/servlet.FileDownload?file=01537000000JDqt&apos;,&quot;&quot;),

IF(
OR(
Owner.Profile.Name = &quot;Sales - P&amp;C&quot;,
Owner.Profile.Name = &quot;P&amp;C - Customer Success&quot;),
IMAGE(&apos;/servlet/servlet.FileDownload?file=01537000000JDqj&apos;,
&quot;&quot;),

IF(
Owner.Profile.Name = &quot;Alpharoot&quot;,
IMAGE(&apos;/servlet/servlet.FileDownload?file=01537000000JDJB&apos;,
&quot;&quot;),

IF(
Owner.Profile.Name = &quot;BRP Partner&quot;,
IMAGE(&apos;/servlet/servlet.FileDownload?file=01537000000JDqo&apos;,
&quot;&quot;),

&quot;&quot;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Yellow = CSB;
Black = FS;
Green = Alpharoot;
Red = BRP</inlineHelpText>
    <label>Account Flag</label>
    <type>Text</type>
</CustomField>