force-app/main/default/objects/Account/fields/Account_Management_Rep__c.field-meta.xml
<CustomField>
    <fullName>Account_Management_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Management Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>