force-app/main/default/objects/Account/fields/Account_Owner_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_User_ID__c</fullName>
    <formula>CASESAFEID(Owner.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner User ID</label>
    <type>Text</type>
</CustomField>