force-app/main/default/objects/Account/fields/ACH_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ACH_Account_Number__c</fullName>
    <label>ACH Account Number</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>