force-app/main/default/objects/Account/fields/AM_Best_Rating__c.field-meta.xml
<CustomField>
    <fullName>AM_Best_Rating__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AM Best Rating</label>
    <length>10</length>
    <type>Text</type>
</CustomField>