force-app/main/default/objects/Account/fields/AMR_Email__c.field-meta.xml
<CustomField>
    <fullName>AMR_Email__c</fullName>
    <formula>Account_Management_Rep__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMR Email</label>
    <type>Text</type>
</CustomField>