force-app/main/default/objects/Account/fields/AMR_First_Name__c.field-meta.xml
<CustomField>
    <fullName>AMR_First_Name__c</fullName>
    <description>Used for Delighted Surveys to get the AMR first name</description>
    <formula>Account_Management_Rep__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMR First Name</label>
    <type>Text</type>
</CustomField>