force-app/main/default/objects/Account/fields/AMR_Override__c.field-meta.xml
<CustomField>
    <fullName>AMR_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this field to override the current AE/AMR mappings</description>
    <label>AMR Override</label>
    <type>Checkbox</type>
</CustomField>