force-app/main/default/objects/Account/fields/Annual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Annual_Premium__c</fullName>
    <description>Code populates this field (policy in-force premium).</description>
    <label>Annual Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>