force-app/main/default/objects/Account/fields/Annual_Revenue_to_FS_5k_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_to_FS_5k_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Annual Revenue to FS 5k Date</label>
    <type>Date</type>
</CustomField>