force-app/main/default/objects/Account/fields/Annual_Revenue_to_FS__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_to_FS__c</fullName>
    <description>Total Rev of in-force policies + Commission (endt) + FS Fee (endt) that are in the stages = BOS/DTI/Paid.

There is a daily batch at midnight and the name is BatchtoCalculateAnnualRevenue.</description>
    <inlineHelpText>Total Rev of in-force policies + Commission (endt) + FS Fee (endt) that are in the stages = BOS/DTI/Paid</inlineHelpText>
    <label>Annual Revenue to FS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>