force-app/main/default/objects/Account/fields/APEX_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>APEX_Account_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>APEX Account ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>