force-app/main/default/objects/Account/fields/AR_Opps__c.field-meta.xml
<CustomField>
    <fullName>AR_Opps__c</fullName>
    <label>AR Opps</label>
    <summaryFilterItems>
        <field>Opportunity.Record_Type__c</field>
        <operation>equals</operation>
        <value>Alpharoot</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>