force-app/main/default/objects/Account/fields/Ascend_Insured_Id__c.field-meta.xml
<CustomField>
    <fullName>Ascend_Insured_Id__c</fullName>
    <description>Id provided by Ascend when an insured is created</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Ascend Insured Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>