force-app/main/default/objects/Account/fields/Ascend_Program_Link__c.field-meta.xml
<CustomField>
    <fullName>Ascend_Program_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ascend Program Link</label>
    <type>Url</type>
</CustomField>