force-app/main/default/objects/Account/fields/Automatic_Reachout__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Reachout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Reachout</label>
    <type>Checkbox</type>
</CustomField>