force-app/main/default/objects/Account/fields/Baldwin_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Baldwin_Branch_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Baldwin Branch Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>