force-app/main/default/objects/Account/fields/BB_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>BB_Company_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BB Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>