force-app/main/default/objects/Account/fields/Bind_Count__c.field-meta.xml
<CustomField>
    <fullName>Bind_Count__c</fullName>
    <description>A roll-up summary field that counts the number of bound submissions, opportunities in stage &apos;Proposal Approved/Closed Won&apos;</description>
    <label>Bind Count</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Proposal Approved/Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>