force-app/main/default/objects/Account/fields/Bind_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Bind_Ratio__c</fullName>
    <description>A formula field that calculate the bind ratio suing: bound opportunities / total opportunities.</description>
    <formula>Bind_Count__c / Submission_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bind Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>