force-app/main/default/objects/Account/fields/Broker_Scale__c.field-meta.xml
<CustomField>
    <fullName>Broker_Scale__c</fullName>
    <description>A field used to input the broker using the marketer/UW value.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker</label>
    <length>200</length>
    <type>Text</type>
</CustomField>