force-app/main/default/objects/Account/fields/BRP_Advisor__c.field-meta.xml
<CustomField>
    <fullName>BRP_Advisor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BRP Advisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>