force-app/main/default/objects/Account/fields/BRP_Advisor_Email__c.field-meta.xml
<CustomField>
    <fullName>BRP_Advisor_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BRP Advisor Email</label>
    <type>Email</type>
</CustomField>