force-app/main/default/objects/Account/fields/BRP_Client_Manager__c.field-meta.xml
<CustomField>
    <fullName>BRP_Client_Manager__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BRP Client Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>