force-app/main/default/objects/Account/fields/BRP_Client_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>BRP_Client_Manager_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BRP Client Manager Email</label>
    <type>Email</type>
</CustomField>