force-app/main/default/objects/Account/fields/BRP_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>BRP_Data_Source__c</fullName>
    <label>BRP Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BCP</fullName>
            </value>
            <value>
                <fullName>BKS</fullName>
            </value>
            <value>
                <fullName>AHT - RP</fullName>
            </value>
            <value>
                <fullName>Mason &amp; Mason</fullName>
            </value>
            <value>
                <fullName>2025 Baldwin Bookroll Phase_2.5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>