force-app/main/default/objects/Account/fields/BRP_Lookup_Code__c.field-meta.xml
<CustomField>
    <fullName>BRP_Lookup_Code__c</fullName>
    <description>Used to identify BRP bookroll account uploads</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BRP Lookup Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>