force-app/main/default/objects/Account/fields/BRP_Notes__c.field-meta.xml
<CustomField>
    <fullName>BRP_Notes__c</fullName>
    <description>Notes for BRP Partner Accounts</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BRP Notes</label>
    <type>TextArea</type>
</CustomField>