force-app/main/default/objects/Account/fields/Cancelled_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Notification_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancelled Notification Date</label>
    <type>Date</type>
</CustomField>