force-app/main/default/objects/Account/fields/cbit__ClearbitDomain__c.field-meta.xml
<CustomField>
    <fullName>cbit__ClearbitDomain__c</fullName>
    <formula>SUBSTITUTE(
if(find(&quot;/&quot;,if(find(&quot;www.&quot;,Website)&gt;0,IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//www.&quot;,Website)+5),NULL),Website),IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//&quot;,Website)+1),NULL),Website)))&gt;0,left(if(find(&quot;www.&quot;,Website)&gt;0,IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//www.&quot;,Website)+5),NULL),Website),IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//&quot;,Website)+1),NULL),Website)),find(&quot;/&quot;,if(find(&quot;www.&quot;,Website)&gt;0,IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//www.&quot;,Website)+5),NULL),Website),IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//&quot;,Website)+1),NULL),Website)))-1),if(find(&quot;www.&quot;,Website)&gt;0,IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//www.&quot;,Website)+5),NULL),Website),IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//&quot;,Website)+1),NULL),Website)))

,&apos;www.&apos;, &apos;&apos;)</formula>
    <label>Clearbit Domain</label>
    <type>Text</type>
</CustomField>