force-app/main/default/objects/Account/fields/Clearbit_EIN__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_EIN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clearbit EIN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>