force-app/main/default/objects/Account/fields/Clicks_3_mo__c.field-meta.xml
<CustomField>
    <fullName>Clicks_3_mo__c</fullName>
    <label>Clicks (3 mo.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>