force-app/main/default/objects/Account/fields/Clicks_7_days__c.field-meta.xml
<CustomField>
    <fullName>Clicks_7_days__c</fullName>
    <label>Clicks (7 days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>