force-app/main/default/objects/Account/fields/Clicks_all_time__c.field-meta.xml
<CustomField>
    <fullName>Clicks_all_time__c</fullName>
    <label>Clicks (all time)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>