force-app/main/default/objects/Account/fields/Client_Age__c.field-meta.xml
<CustomField>
    <fullName>Client_Age__c</fullName>
    <description>Today - Created Date of Account</description>
    <formula>TODAY()-DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Today - Created Date of Account</inlineHelpText>
    <label>Client Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>