force-app/main/default/objects/Account/fields/Client_Since__c.field-meta.xml
<CustomField>
    <fullName>Client_Since__c</fullName>
    <description>Automatically populate based on the accounts first Policy’s Effective Date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Since</label>
    <type>Date</type>
</CustomField>