force-app/main/default/objects/Account/fields/CNA_Hardford_Account__c.field-meta.xml
<CustomField>
    <fullName>CNA_Hardford_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine how the Quote is processed for submission to Ascend, including payment and financing information, specifically for CNA, Hartford, and Chubb New Business accounts.</description>
    <inlineHelpText>check this field only if account is CNA, Hardford or Chubb New Business.</inlineHelpText>
    <label>Is CNA/Hardford Account</label>
    <type>Checkbox</type>
</CustomField>