force-app/main/default/objects/Account/fields/COI_Survey__c.field-meta.xml
<CustomField>
    <fullName>COI_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers the COI Survey in Delighted</description>
    <inlineHelpText>Triggers the COI Survey in Delighted</inlineHelpText>
    <label>COI Survey</label>
    <type>Checkbox</type>
</CustomField>