force-app/main/default/objects/Account/fields/Conglomerated_Account__c.field-meta.xml
<CustomField>
    <fullName>Conglomerated_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shira Request</description>
    <label>Conglomerated Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>