force-app/main/default/objects/Account/fields/Conglomerated_Connection__c.field-meta.xml
<CustomField>
    <fullName>Conglomerated_Connection__c</fullName>
    <label>Conglomerated Connection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Related Entity</fullName>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
            </value>
            <value>
                <fullName>Same Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>