force-app/main/default/objects/Account/fields/Conversions_All_Time__c.field-meta.xml
<CustomField>
    <fullName>Conversions_All_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Conversions (all time)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>