force-app/main/default/objects/Account/fields/Coverages__c.field-meta.xml
<CustomField>
    <fullName>Coverages__c</fullName>
    <description>(Field Name)  Coverages Not Maintained. (Purpose of Field)  Lists all the coverages that have are not currently on an application submitted by the client account. (Used in Record Types)  All but Issuing Company, ReShield Client, and Scale. (Used in Layouts)  FS Direct, Account Layout. (Visible to)  Only Sys Admin. (Shows up in reports)  y</description>
    <label>Coverages Not Maintained</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Liability</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Errors &amp; Omissions</fullName>
            </value>
            <value>
                <fullName>Cyber Liability</fullName>
            </value>
            <value>
                <fullName>Directors &amp; Officers</fullName>
            </value>
            <value>
                <fullName>Employment Practices Liability Insurance</fullName>
            </value>
            <value>
                <fullName>Worker&apos;s Compensation</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Commercial Crime</fullName>
            </value>
            <value>
                <fullName>Fiduciary Liability</fullName>
            </value>
            <value>
                <fullName>Product Liability</fullName>
            </value>
            <value>
                <fullName>Hired &amp; Non Owned Auto</fullName>
            </value>
            <value>
                <fullName>Commercial Auto</fullName>
            </value>
            <value>
                <fullName>Intellectual Property</fullName>
            </value>
            <value>
                <fullName>Contract Frustration Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>