force-app/main/default/objects/Account/fields/CSAT_Survey__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers the CSAT Survey in Delighted</description>
    <inlineHelpText>Triggers the CSAT Survey in Delighted</inlineHelpText>
    <label>CSAT Survey</label>
    <type>Checkbox</type>
</CustomField>