force-app/main/default/objects/Account/fields/Current_Client__c.field-meta.xml
<CustomField>
    <fullName>Current_Client__c</fullName>
    <formula>Policies_in_force__c&gt;= 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Client</label>
    <type>Checkbox</type>
</CustomField>