force-app/main/default/objects/Account/fields/Current_Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Quarter__c</fullName>
    <formula>CASE(
  MONTH(TODAY()), 
  1, &quot;Q1&quot;,
  2, &quot;Q1&quot;,
  3, &quot;Q1&quot;,
  4, &quot;Q2&quot;,
  5, &quot;Q2&quot;,
  6, &quot;Q2&quot;,
  7, &quot;Q3&quot;,
  8, &quot;Q3&quot;,
  9, &quot;Q3&quot;,
  10, &quot;Q4&quot;,
  11, &quot;Q4&quot;,
  12, &quot;Q4&quot;,
  &quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Fiscal Quarter</label>
    <type>Text</type>
</CustomField>