force-app/main/default/objects/Account/fields/Currently_offering_H_B__c.field-meta.xml
<CustomField>
    <fullName>Currently_offering_H_B__c</fullName>
    <label>Currently offering H&amp;B?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>