force-app/main/default/objects/Account/fields/Date_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Incorporation__c</fullName>
    <description>The date the insured formed their business (Corporation, LLC, etc.)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Incorporation</label>
    <type>Date</type>
</CustomField>