force-app/main/default/objects/Account/fields/Dialpad__Timezone__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Timezone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>