force-app/main/default/objects/Account/fields/Distance_From_Last_Policy__c.field-meta.xml
<CustomField>
    <fullName>Distance_From_Last_Policy__c</fullName>
    <formula>TODAY()-Most_Recent_Renewal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance From Last Policy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>