force-app/main/default/objects/Account/fields/Dont_send_email__c.field-meta.xml
<CustomField>
    <fullName>Dont_send_email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used in the &quot;Out to Market&quot; email (SendGrid). 

Opp Policy_Type_Status__c = New Business
Opp Stage = Need to Submit
Opp Record Type = Founder Shield 
Account Current_Client__c = false
Dont send email = false</description>
    <inlineHelpText>Check this box if you do not want the Out to Market email to send to the client.</inlineHelpText>
    <label>Dont send email</label>
    <type>Checkbox</type>
</CustomField>