force-app/main/default/objects/Account/fields/Existing_Broker__c.field-meta.xml
<CustomField>
    <fullName>Existing_Broker__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Existing Broker</label>
    <length>30</length>
    <type>Text</type>
</CustomField>