force-app/main/default/objects/Account/fields/Extended_Date__c.field-meta.xml
<CustomField>
    <fullName>Extended_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Extended Date</label>
    <type>Date</type>
</CustomField>