force-app/main/default/objects/Account/fields/FEIN_Number__c.field-meta.xml
<CustomField>
    <fullName>FEIN_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FEIN#</label>
    <length>20</length>
    <type>Text</type>
</CustomField>